# ESP32-S3-Demo

./: README.md
boot_key/: CMakeLists.txt  sdkconfig  sdkconfig.old
boot_key/main/: main.c
wifi-basic/: CMakeLists.txt  sdkconfig
wifi-basic/main/: CMakeLists.txt  wifi_basic_main.c  wifi_manager.c  wifi_manager.h
wifi_AP_WS/: CMakeLists.txt  partitions_webserver.csv
wifi_AP_WS/main/: CMakeLists.txt  ap_wifi.c  ap_wifi.h  main.c  wifi_manager.c  wifi_manager.h  ws_server.c  ws_server.h
